# VLDB2022

Code/KNN/: CMakeLists.txt
Code/KNN/ActiveRanking/: ActiveRanking.cpp  ActiveRanking.h
Code/KNN/DI/: DI.h
Code/KNN/Others/: operation.cpp  operation.h  pruning.cpp
Code/KNN/RH/: RH.cpp  RH.h
Code/KNN/UH/: UHRandom.cpp  UHRandom.h
Code/KNN/UtilityApprox/: UtilityApprox.cpp
Code/KNN/output/: hyperplane_data.txt
Code/KNN/qhull/: qhull_build.cpp
Code/KNN/structure/: hyperplane_set.cpp  hyperplane_set.h  point_t.h  rtree.h
Code/UserStudy/: readme.txt
Code/UserStudy/BS/: BS.cpp  BS.h
Code/UserStudy/Others/: operation.cpp
Code/UserStudy/RH/: RH.cpp
Code/UserStudy/UH/: UHRandom.cpp
Code/UserStudy/input/: car.txt
Code/UserStudy/output/: ext_pt.txt  hyperplane_data.txt
Code/UserStudy/qhull/: qhull_build.h
Code/UserStudy/structure/: define.h  hyperplane.h  point_set.h  point_t.cpp
First submission/Code/KNN/: config.txt  main.cpp  readme.txt
First submission/Code/KNN/BS/: BS.cpp  BS.h
First submission/Code/KNN/DI/: DI.cpp
First submission/Code/KNN/EDI/: EDI.cpp  EDI.h
First submission/Code/KNN/GroundTruth/: Groundtruth.cpp
First submission/Code/KNN/Others/: pruning.h
First submission/Code/KNN/input/: 11d.txt
First submission/Code/KNN/output/: ext_pt.txt
First submission/Code/KNN/structure/: hyperplane.cpp  (+3 more)
First submission/Code/UserStudy/: main.cpp
First submission/Data/: Data.xlsx
Revised submission/Code/: result.txt
Revised submission/Code/KNN/: CMakeLists.txt  config.txt  main.cpp  readme.txt
Revised submission/Code/KNN/ActiveRanking/: ActiveRanking.cpp  ActiveRanking.h
Revised submission/Code/KNN/BS/: BS.cpp  BS.h
Revised submission/Code/KNN/Baseline/: Baseline.cpp  Baseline.h
Revised submission/Code/KNN/DI/: DI.cpp  DI.h
Revised submission/Code/KNN/EDI/: EDI.cpp  EDI.h
Revised submission/Code/KNN/GroundTruth/: Groundtruth.cpp
Revised submission/Code/KNN/Others/: operation.cpp  operation.h  pruning.cpp  pruning.h
Revised submission/Code/KNN/RH/: RH.cpp  RH.h
Revised submission/Code/KNN/UH/: UHRandom.cpp  UHRandom.h
Revised submission/Code/KNN/UtilityApprox/: UtilityApprox.cpp  UtilityApprox.h
Revised submission/Code/KNN/input/: Anti11d.txt
Revised submission/Code/KNN/output/: candPoint.txt  ext_pt.txt  hyperplane_data.txt  partition.txt
Revised submission/Code/KNN/structure/: hyperplane.cpp  hyperplane.h  hyperplane_set.cpp  hyperplane_set.h  point_set.cpp  point_set.h  point_t.cpp  point_t.h
Revised submission/Code/UserStudy/: CMakeLists.txt
Revised submission/Data/: Result.xlsx
(+22 files in other folders)
